--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   syncfusion_flutter_charts: ^21.2.8
+  pocketbase: ^0.10.0
 
 dev_dependencies:
   flutter_test:
