--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   equatable: ^2.0.5
   mocktail: ^0.3.0
   dio: ^5.3.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
