--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dio: ^5.3.0
   flutter_bloc: ^8.1.3
   get_it: ^7.6.0
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
