--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   get_it: ^7.6.0
   flutter_secure_storage: ^8.0.0
+  flutter_share: ^2.0.0
 
 dev_dependencies:
   flutter_test:
