--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,18 +36,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   syncfusion_flutter_charts: ^21.2.8
-  pocketbase: ^0.10.0
+  pocketbase: ^0.15.1
   dartz: ^0.10.1
   equatable: ^2.0.5
   mocktail: ^0.3.0
   dio: ^5.3.0
   flutter_bloc: ^8.1.3
   get_it: ^7.6.0
-  flutter_secure_storage: ^8.0.0
   flutter_share: ^2.0.0
   cron: ^0.5.1
   url_launcher: ^6.1.14
   flutter_signin_button: ^2.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
