--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -92,7 +92,7 @@ BEGIN
             VALUE "CompanyName", "com.example" "\0"
             VALUE "FileDescription", "household_organizer" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "household_organizer" "\0"
+            VALUE "InternalName", "hmly" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "household_organizer.exe" "\0"
             VALUE "ProductName", "household_organizer" "\0"
