--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,6 @@ dependencies:
   flutter_bloc: ^8.1.3
   get_it: ^7.6.0
   flutter_share: ^2.0.0
-  cron: ^0.5.1
   url_launcher: ^6.1.14
   flutter_signin_button: ^2.0.0
   shared_preferences: ^2.2.2
@@ -78,7 +77,7 @@ flutter:
   uses-material-design: true
   generate: true
   assets:
-    - assets/svg/logo-no-background.svg
+    - assets/png/logo-no-background.png
     - assets/svg/logo-black.svg
     - assets/png/logo-black.png
 
